# pypistats.org

./: .dockerignore  .ebignore  .env.example  .env.sample  .gitignore  .isort.cfg  .tool-versions  ADMIN_FEATURES.md  CLAUDE.md  CONFIGURATION.md  Dockerfile  ETL_TESTING.md  Makefile  Pipfile  Procfile  README.rst  backfill_examples.md  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  manage_backfill.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run.sh  run_beat.sh  run_celery.sh  run_flask.sh  supervisord.conf  zappa_settings.json  zappa_settings_template.json
.github/workflows/: ci.yml
envs/: local.env
kubernetes/: commands.sh  deploy.sh  flower.yaml  namespace.yaml  redis.yaml  run.sh  tasks.yaml  web.yaml
migrations/: alembic.ini  env.py  script.py.mako  seeds.py
migrations/versions/: 20200303_221751_0cf9945079f1_setup_tables.py  20250814_180627_50cca6fa7694_change_download_columns_from_integer_to_.py  9116cea0e0d7_.py  a91799876ec2_add_indexes.py  c81b3715b9e5_.py  e65ba8f3cdcf_.py
pypistats/: application.py  config.py  database.py  extensions.py  run.py  settings.py
pypistats/models/: download.py  user.py
pypistats/plots/: data_base.json  plot_base.json
pypistats/secret/: .env.sample  __init__.py
pypistats/static/: style.css
pypistats/tasks/: backfill.py  db.py  pypi.py
pypistats/templates/: about.html  admin.html  api.html  faqs.html  index.html  layout.html  package.html  results.html  search.html  top.html  user.html
pypistats/views/: __init__.py  admin.py  api.py  error.py  general.py  user.py
scripts/: backfill.sh  run_beat.sh  run_celery.sh  run_etl.sh  run_flask.sh  run_migrate.sh
